Fixed wrapping of long words in modal dialog.

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -4199,6 +4199,7 @@ footer {
   border-radius: 0;
   border: 1px solid hsl(0,0%,90%);
   box-shadow: none;
+  word-wrap: break-word;
 }
 
   .modal-header {
